langtools/test/tools/javac/enum/EnumAsIdentifier.out
EnumAsIdentifier.java:13:9: compiler.err.enum.as.identifier
1 error
